# lucas_tester

./: CMakeLists.txt  main.cpp  qtester.cpp  qtester.h  qtester.ui
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/xml/: device_filter.xml
android/src/com/lucas/tester/: Tester.java  TesterListener.java
